[gd_scene load_steps=25 format=1]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Nave.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Fundos/fundo_corona.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://Sprites/HUD/life.png" type="Texture" id=5]
[ext_resource path="res://Scripts/pauser.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Objetos/portal.png" type="Texture" id=7]
[ext_resource path="res://Musicas/Fase 1/Fase 1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Musicas/Fase 1/Fase 1 Chefe.ogg" type="AudioStream" id=9]
[ext_resource path="res://Musicas/Fase 2/Fase 2.ogg" type="AudioStream" id=10]
[ext_resource path="res://Musicas/Fase 2/Fase 2 Chefe.ogg" type="AudioStream" id=11]
[ext_resource path="res://Musicas/Fase 3/Fase 3.ogg" type="AudioStream" id=12]
[ext_resource path="res://Musicas/Fase 3/Fase 3 Chefe.ogg" type="AudioStream" id=13]
[ext_resource path="res://Musicas/Fase 4/Fase 4.ogg" type="AudioStream" id=14]
[ext_resource path="res://Musicas/Fase 4/Fase 4 - Chefe.ogg" type="AudioStream" id=15]
[ext_resource path="res://Musicas/Fase 5/Fase 5.ogg" type="AudioStream" id=16]
[ext_resource path="res://Musicas/Fase 5/Fase 5 Chefe.ogg" type="AudioStream" id=17]
[ext_resource path="res://Musicas/Fase 6/Fase 6.ogg" type="AudioStream" id=18]
[ext_resource path="res://Musicas/Fase 6/Fase 6 - Chefe.ogg" type="AudioStream" id=19]
[ext_resource path="res://Musicas/Menu/Passar de fase.ogg" type="AudioStream" id=20]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Fontes/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = SubResource( 1 )

[sub_resource type="Animation" id=3]

length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lbl_passa_de_fase:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2, 3.5, 4.5, 6 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0, 1.0, 0.0 ] }
tracks/1/type = "method"
tracks/1/path = NodePath("Nave")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 3.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ "info" ], "method":"muda_de_frase" } ] }

[sub_resource type="Animation" id=4]

length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lbl_passa_de_fase:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 1, 2.5, 6.5, 7 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 1.0, 0.0 ] }

[node name="main" type="CanvasLayer"]

process/pause_mode = 1
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Nave" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 75, 250 )
transform/rot = 1.0
transform/scale = Vector2( 0.5, 0.5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="fundo" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/fundo"]

transform/pos = Vector2( 518, 306 )
texture = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 6, 4 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 4 )

[node name="HUD" type="HBoxContainer" parent="Camera"]

editor/display_folded = true
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = -4.0
margin/right = 174.0
margin/bottom = 36.0
alignment = 1

[node name="HP" type="HBoxContainer" parent="Camera/HUD"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 0.0
margin/right = 129.0
margin/bottom = 40.0
alignment = 0

[node name="title" type="Label" parent="Camera/HUD/HP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 13.0
margin/right = 18.0
margin/bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0429688, 0.0105743, 0.0105743, 1 )
text = "HP"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="HBoxContainer" parent="Camera/HUD/HP"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 0.0
margin/right = 114.0
margin/bottom = 40.0
alignment = 0

[node name="ponto" type="TextureFrame" parent="Camera/HUD/HP/value"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 40.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ponto1" type="TextureFrame" parent="Camera/HUD/HP/value"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 40.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ponto2" type="TextureFrame" parent="Camera/HUD/HP/value"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 40.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ponto3" type="TextureFrame" parent="Camera/HUD/HP/value"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 0.0
margin/right = 92.0
margin/bottom = 40.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="SCORE" type="HBoxContainer" parent="Camera/HUD"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 0.0
margin/right = 165.0
margin/bottom = 40.0
alignment = 1

[node name="Espaco" type="MarginContainer" parent="Camera/HUD/SCORE"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 8.0
margin/bottom = 40.0

[node name="title" type="Label" parent="Camera/HUD/SCORE"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 13.0
margin/right = 20.0
margin/bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0429688, 0.0105743, 0.0105743, 1 )
text = "P"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="Camera/HUD/SCORE"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 13.0
margin/right = 32.0
margin/bottom = 27.0
custom_colors/font_color = Color( 0.898438, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0.542969, 0.282089, 0.282089, 1 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pauser" type="Node" parent="."]

process/pause_mode = 2
script/script = ExtResource( 6 )

[node name="passa_de_fase" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="lbl_passa_de_fase" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 56.0
margin/right = 58.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.3125, 0.288086, 0.288086, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/line_spacing = 19
text = "coelho"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Animacoes" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/inicio_de_fase = SubResource( 3 )
anims/passa_de_fase = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="portal" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 2, 6 )
texture = ExtResource( 7 )

[node name="Musicas" type="Node" parent="."]

editor/display_folded = true

[node name="Fase 1" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 1"]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 1"]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fase 2" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 2"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 2"]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fase 3" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 3"]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 3"]

stream/stream = ExtResource( 13 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fase 4" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 4"]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 4"]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fase 5" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 5"]

stream/stream = ExtResource( 16 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 5"]

stream/stream = ExtResource( 17 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fase 6" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Fase 6"]

stream/stream = ExtResource( 18 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="chefe" type="StreamPlayer" parent="Musicas/Fase 6"]

stream/stream = ExtResource( 19 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Passar" type="Node" parent="Musicas"]

editor/display_folded = true

[node name="fase" type="StreamPlayer" parent="Musicas/Passar"]

stream/stream = ExtResource( 20 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Menu" type="VBoxContainer" parent="."]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
visibility/behind_parent = true
visibility/light_mask = 0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 162.0
margin/right = 60.0
margin/bottom = 32.0
alignment = 0

[node name="title" type="Label" parent="Menu"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0.980469, 0.0306396, 0.0306396, 1 )
custom_colors/font_color_shadow = Color( 0.367188, 0.283997, 0.283997, 1 )
text = "Jogo Pausado"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Itens" type="VBoxContainer" parent="Menu"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 18.0
margin/right = 83.0
margin/bottom = 130.0
alignment = 1

[node name="c" type="VBoxContainer" parent="Menu/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 31.0
margin/right = 83.0
margin/bottom = 45.0
alignment = 0

[node name="continue" type="Label" parent="Menu/Itens/c"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continuar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ng" type="VBoxContainer" parent="Menu/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 49.0
margin/right = 83.0
margin/bottom = 63.0
alignment = 0

[node name="new game" type="Label" parent="Menu/Itens/ng"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Novo Jogo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="e" type="VBoxContainer" parent="Menu/Itens"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 67.0
margin/right = 83.0
margin/bottom = 81.0
alignment = 0

[node name="exit" type="Label" parent="Menu/Itens/e"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Sair"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="passa_de_fase" to="." method="_on_passa_de_fase_timeout"]

[connection signal="input_event" from="Menu/Itens/c" to="pauser" method="_on_c_input_event"]

[connection signal="mouse_enter" from="Menu/Itens/c" to="pauser" method="_on_c_mouse_enter"]

[connection signal="mouse_exit" from="Menu/Itens/c" to="pauser" method="_on_c_mouse_exit"]

[connection signal="input_event" from="Menu/Itens/ng" to="pauser" method="_on_ng_input_event"]

[connection signal="mouse_enter" from="Menu/Itens/ng" to="pauser" method="_on_ng_mouse_enter"]

[connection signal="mouse_exit" from="Menu/Itens/ng" to="pauser" method="_on_ng_mouse_exit"]

[connection signal="input_event" from="Menu/Itens/e" to="pauser" method="_on_e_input_event"]

[connection signal="mouse_enter" from="Menu/Itens/e" to="pauser" method="_on_e_mouse_enter"]

[connection signal="mouse_exit" from="Menu/Itens/e" to="pauser" method="_on_e_mouse_exit"]


